Split parsing and generating